--- a/node/package.json
+++ b/node/package.json
@@ -4,19 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "test": "NODE_ENV=test jest --verbose --silent",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test:watch": "npm run test -- --watch tests/notes.test.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "supertest": "^6.1.3"
   }
 }
